--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+@import url('https://v1.fontapi.ir/css/Nazanin');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Nazanin, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -17,6 +19,17 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@layer utilities {
+  .input-label {
+    @apply text-2xl block mb-2 font-medium text-gray-900 dark:text-white;
+  }
+
+  .input,
+  .textarea {
+    @apply shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm;
+  }
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -25,14 +38,6 @@ a {
 
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -66,9 +71,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
